src/salesforce/retrieve/metadata/objects/Entity__c.object
<CustomObject>
    <fields>
        <fullName>EntityId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EntityId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsProcessingNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessingNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdateNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdateNeeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TableName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TableName</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>